--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     
+
+   
+
+      (header>nav>ul>li*3>a{lien$})+(section>h1{premiere section}+p{lorem})+(section>h1{contact}+label{email:}+input+label{message:}+textarea)+(footer>span{copyright@nom})
+
 </body>
 </html>
