--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+  
 
-   
+    <!-- (header>nav>ul>li*3>a{lien$})+(section>h1{premiere section}+p{lorem})+(section>h1{contact}+label{email:}+input+label{message:}+textarea)+(footer>span{copyright@nom}) -->
 
-      (header>nav>ul>li*3>a{lien$})+(section>h1{premiere section}+p{lorem})+(section>h1{contact}+label{email:}+input+label{message:}+textarea)+(footer>span{copyright@nom})
-
-</body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="">lien1</a></li>
+          <li><a href="">lien2</a></li>
+          <li><a href="">lien3</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section>
+      <h1>premiere section</h1>
+      <p>lorem</p>
+    </section>
+    <section>
+      <h1>contact</h1>
+      <label for="">email:</label><input type="text" /><label for=""
+        >message:</label
+      ><textarea name="" id="" cols="30" rows="10"></textarea>
+    </section>
+    <footer><span>copyright@nom</span></footer>
+  </body>
 </html>
